...
}

class _QuestionsPageState extends State<_QuestionsPage> {
  var _taskIndex = 0;
  late final List<Widget> _answers;
  final _tasks = <String>[
    "Click on elevated button with centered 'Fluttercon' text",
    'Click on an elevated button, which is placed in a list tile with a dash icon',
    'Click on the third button that is enabled',
  ];

  @override
  void initState() {
...
  final VoidCallback onPressed;
  final bool showTrailing;

  @override
  Widget build(BuildContext context) {
    return PTElevatedButton(
      caption: 'click',
      trailing: showTrailing ? const _Dash(color: PTColors.lcBlack) : null,
      onPressed: onPressed,
    );
  }
}

...
