...
        PTElevatedButton(
          caption: 'Sign In with Google',
          onPressed: context.read<AuthCubit>().signInWithGoogle,
        ),
        const _TextSeparator(),
        PTElevatedButton(
          caption: 'Go to the quiz',
          onPressed: () => Navigator.push(context, quizWelcomeRoute),
        ),
        const _TextSeparator(),
        PTElevatedButton(
          caption: 'Send notification',
          onPressed: () =>
...
