...
                  name,
                  style: Theme.of(context).textTheme.headlineSmall,
                ),
              ],
            ),
            Text(
              key: const Key('statusText'),
              granted ? 'Granted' : 'Not granted',
            ),
            TextButton(
              onPressed: onTap,
              child: Text(
                'Request ${name.toLowerCase()} permission',
                style: Theme.of(context)
...
